# celery-workshop

./: .gitignore  README.md  pyproject.toml
scripts/: __init__.py  chapter1_exercise6_trigger.py  manage_solutions.py
src/celery_workshop/: case_1_tasks.py  celery.py  chapter1.py  chapter1_exercises.py  config.py  exercises_ch1_tasks.py  logging.py  testing.py
tests/: conftest.py  test_basics.py  test_chapter1.py  test_chapter_1.py
